# qsim-mcp

./: .env.example  .gitignore  README.md  Tunable coupler version #1 version.py  pyproject.toml  requirements.txt  solver.py
resources/: demo  munch_qubits.py  simpleChip
src/aedt/: launch_ansys.py  solver_optimized.py
src/octave-mcp/: __init__.py  config.json  octave_openems_server.py  requirements.txt
src/qiskit-metal-mcp/: QUANTUM_HARDWARE_README.md  QUANTUM_HARDWARE_USAGE.md  README.md  cursor_test_prompts.md  mcp_config.json  quantum_hardware_mcp_server.py  quiskit-metal-mcp-server.py
src/resources/: chip.py
